--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-helmet": "^5.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.8",
+    "react-transition-group": "^4.2.1",
     "serve": "^11.0.0"
   },
   "scripts": {
