--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-transition-group": "^4.3.0",
-    "serve": "^11.2.0"
+    "serve": "^11.2.0",
+    "set-value": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
