--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint": "eslint \"**/*.{js,jsx}\"",
     "lint:fix": "eslint --fix  \"**/*.{js,jsx}\"",
     "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "node-start": "node index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
