--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,7 +21,7 @@ jobs:
           npm ci
           npm run build --if-present
           npm test
-          chmod +x ./deploy.sh
-          ./deploy.sh
+          chmod +x deploy.sh
+          deploy.sh
         env:
           CI: true
