--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "set-value": "^3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "react-start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint \"**/*.{js,jsx}\"",
     "lint:fix": "eslint --fix  \"**/*.{js,jsx}\"",
     "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
     "eject": "react-scripts eject",
-    "node-start": "node index.js"
+    "start": "node index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
