--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,9 @@ jobs:
         run: |
           npm ci
           npm run build --if-present
-          npm test
+          npm run lint
+          npm run test
+          chmod +x deploy.sh
+          deploy.sh
         env:
           CI: true
