--- a/.eslintignore
+++ b/.eslintignore
@@ -3,3 +3,6 @@ build/**
 node_modules/**
 src/serviceWorker.js
 index.js
+__tests__
+src/setupTests.js
+"import/no-extraneous-dependencies": ["error",{devDependencies":true}]
