--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
-    "setupFiles": ["./src/setupTests.js"]
+    "setupFiles": [
+      "./src/setupTests.js"
+    ]
   },
   "browserslist": [
     ">0.2%",
