--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "express": "^4.17.1",
+    "i18next": "^19.0.1",
+    "i18next-browser-languagedetector": "^4.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-i18next": "^11.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-transition-group": "^4.3.0",
