--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "prettier",
     "prettier/react"
   ],
+  "parser": "babel-eslint",
   "plugins": ["jsx-a11y", "prettier"],
   "rules": {
     "jsx-a11y/label-has-associated-control": "off",
