--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --watchAll",
     "lint": "eslint \"**/*.{js,jsx}\"",
     "lint:fix": "eslint --fix  \"**/*.{js,jsx}\"",
     "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
@@ -38,6 +38,7 @@
   "description": "SmallWorld Website",
   "main": "index.js",
   "devDependencies": {
+    "enzyme-to-json": "^3.4.3",
     "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.7.0",
@@ -47,6 +48,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "husky": "^3.1.0",
+    "jest": "^24.9.0",
     "prettier": "^1.19.1"
   },
   "author": "",
