--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,11 @@
     "react-helmet": "^5.2.1",
     "react-hook-form": "^3.28.11",
     "react-i18next": "^11.2.5",
+    "react-images": "^1.0.0",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
+    "react-snowstorm": "0.0.3",
     "react-transition-group": "^4.3.0",
     "serve": "^11.2.0",
     "set-value": "^3.0.1",
